# calculator

./: CMakeLists.txt  Dockerfile  azure-pipelines.yml
.github/: CODEOWNERS
